--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "config": "^3.3.7",
     "express": "^4.17.3",
     "jsontoxml": "^1.0.1",
+    "msql": "^1.0.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   }
